test/compile_failure/15_array_size_zero.c
// EXPECT-ERRORS: 1
// EXPECT: array size must be a positive integer constant
int values[0];
